--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-template",
+  "name": "lashpic",
   "version": "0.0.2",
   "private": true,
   "scripts": {
@@ -17,11 +17,13 @@
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@tanstack/react-query": "^4.29.14",
     "@tanstack/react-query-devtools": "^4.29.14",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
-    "jotai": "^2.2.1",
+    "framer-motion": "^11.2.12",
+    "geist": "^1.3.1",
     "lucide-react": "^0.246.0",
     "next": "^13.4.4",
     "next-themes": "^0.2.1",
@@ -30,9 +32,9 @@
     "react-intersection-observer": "^9.5.0",
     "sharp": "^0.31.3",
     "sonner": "^0.5.0",
-    "swr": "^2.1.5",
-    "tailwind-merge": "^1.12.0",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
@@ -45,10 +47,10 @@
     "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-tailwindcss": "^3.12.0",
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.4.10",
     "typescript": "^4.9.5"
   }
 }
